test/Fail/Issue1698-primitive.err
Issue1698-primitive.agda:2.3: error: [ParseError]
data<ERROR>  D : Set where

-- Bad error m...
